--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
   --secondary-color: #52ab98;
   --main-radius:5px;
   --main-padding:5px;  
-
+  #9DD1F1]
+  
 }
 
 * {
@@ -59,16 +60,17 @@ picture {
   display:grid;
   height:100vh;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.3fr 1.5fr 1.2fr 0.2fr;
+  grid-template-rows: 0.3fr 1.5fr 1.2fr 0.6fr;
   grid-template-areas: 
   "nav nav nav nav"
-  "sidebar main main main"
+  "sidebar  main main main"
   "sidebar content1 content2 content3"
   "sidebar footer footer footer";
   grid-gap: 0.2rem;
   font-weight: 800;
   text-transform: uppercase;
   font-size: 12px;
+  overflow:auto
 }
 
 /* .container-style {
@@ -137,11 +139,37 @@ main{
   padding-top: var(--main-padding);
 }
 
+main h1 {
+  text-decoration: line-through;
+}
+
 #sidebar { 
   background:var(--primary-color);
   grid-area: sidebar;
   border-radius: var(--main-radius);
   padding-top: var(--main-padding);
+}
+
+#sidebar img {
+width: 170px;
+height: 170px;
+padding: 150;
+display: block;
+margin-left: auto;
+margin-right: auto;
+margin-top: 20px;
+}
+
+#sidebar p, h3{
+  text-align: center
+}
+
+.home-right {
+  width:400px;
+  height: 400px;
+  float: right;
+  margin:  50px 50px;
+  
 }
 
 #content1 {
@@ -187,8 +215,4 @@ footer {
   }
 
 /* header properties */
-
-
-
-
 
